--- a/index.html
+++ b/index.html
@@ -37,22 +37,22 @@
             <div class="achievement">
                 <h2>Prestasi</h2>
                 <div>
-                    <img src="images/sertifikat_course_123_974511_160624192801_Page_1.png" alt="">
+                    <img src="images/sertifikat_course_123_974511_160624192801_Page_1.png" alt="basic-web-certicate">
                     <strong>Sertifikat Dicoding - Belajar Dasar Pemrograman Web</strong>
                     <input type="button" value="Lihat">
                 </div>
                 <div>
-                    <img src="images/sertifikat_course_251_1409778_180721160133_Page_1.png" alt="">
+                    <img src="images/sertifikat_course_251_1409778_180721160133_Page_1.png" alt="aws-certificate">
                     <strong>Sertifikat Dicoding - Cloud Practitioner Essentials</strong>
                     <input type="button" value="Lihat">
                 </div>
                 <div>
-                    <img src="images/sertifikat_course_256_1409778_191022224319_Page_1.png" alt="">
+                    <img src="images/sertifikat_course_256_1409778_191022224319_Page_1.png" alt="javascript-certificate">
                     <strong>Sertifikat Dicoding - Belajar Dasar Pemrograman Javascript</strong>
                     <input type="button" value="Lihat">
                 </div>
                 <div>
-                    <img src="images/sertifikat_course_261_1409778_291222192749_Page_1.png" alt="">
+                    <img src="images/sertifikat_course_261_1409778_291222192749_Page_1.png" alt="nodejs backend-certificate">
                     <strong>Sertifikat Dicoding - Belajar Membuat Aplikasi Back-End untuk Pemula</strong>
                     <input type="button" value="Lihat">
                 </div>
@@ -80,6 +80,7 @@
                         <li>Menguasai keterampilan dasar web seperti HTML, CSS, JavaScript, PHP dan Node.Js</li>
                         <li>Pengetahuan yang baik tentang framework seperti React, Laravel dan Hapi</li>
                         <li>Kemampuan dalam menyelesaikan masalah / <i>problem-solving</i> yang baik</li>
+                        <li>fasih dalam berbicara dan membaca bahasa Inggris</li>
                         <li>Memiliki motivasi untuk terus belajar dan berkembang</li>
                         <li>Bersedia untuk mempelajari teknologi baru</li>
                         <li>Mampu mengelola waktu dengan baik</li>
