--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <input type="button" value="Lihat">
                 </div>
                 <div>
-                    <img src="images/sertifikat_course_261_1409778_291222192749_Page_1.png" alt="nodejs backend-certificate">
+                    <img src="images/sertifikat_course_261_1409778_291222192749_Page_1.png" alt="nodejs-backend-certificate">
                     <strong>Sertifikat Dicoding - Belajar Membuat Aplikasi Back-End untuk Pemula</strong>
                     <input type="button" value="Lihat">
                 </div>
