change skill word

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <li>Menguasai keterampilan dasar web seperti HTML, CSS, JavaScript, PHP dan Node.Js</li>
                         <li>Pengetahuan yang baik tentang framework seperti React, Laravel dan Hapi</li>
                         <li>Kemampuan dalam menyelesaikan masalah / <i>problem-solving</i> yang baik</li>
-                        <li>fasih dalam berbicara dan membaca bahasa Inggris</li>
+                        <li>Memiliki kemampuan membaca dan menulis Bahasa Inggris</li>
                         <li>Memiliki motivasi untuk terus belajar dan berkembang</li>
                         <li>Bersedia untuk mempelajari teknologi baru</li>
                         <li>Mampu mengelola waktu dengan baik</li>
